--- a/form/full-demo.htm
+++ b/form/full-demo.htm
@@ -62,8 +62,8 @@
 
 		<textarea cols="26" rows="5" placeholder="textarea"/></textarea>
 
-		<input type="submit" value=".btn-env" class="btn-env"/>
-		<input type="reset"  value=".btn-lmp" class="btn-lmp"/>
+		<input type="submit" value=".btn .env" class="btn env"/>
+		<input type="reset"  value=".btn .lmp" class="btn lmp"/>
 
 		<!-- Avançados -->
 		<div class="clear"></div>
